# flatrig-retarget-sidecar

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: flatrig_retarget.py
configs/: multiview_sam_fast.json
src/flatrig/: __init__.py  _sidecar_import.py  animation.py  cli.py  mesh.py  projection.py  scene_formats.py  texture.py
src/flatrig_retarget_sidecar/: __init__.py  cli.py  gmr_retarget.py  motion2motion_retarget.py  pan_retarget.py  retarget_3d.py  rig_identity.py  scene_formats.py  sparse_mapping.py  spine_import.py  spine_motion2motion_bridge.py
tests/: __init__.py  helpers.py  test_blender_json_io.py  test_blender_predicted_rig.py  test_blender_scene_orientation.py  test_blender_view.py  test_cli.py  test_mesh_reduction_weld.py  test_motion2motion.py  test_rig_identity.py  test_scene_formats.py  test_sparse_mapping.py  test_spine_import.py  test_spine_motion2motion_bridge.py  test_sprite_render_manifest.py  test_texture_reference_filter.py  test_texture_soft_ring.py  test_worker_args.py
tools/: blender_json_io.py  blender_orientation.py  blender_scene_io.py  blender_view.py  blender_worker_args.py  install_motion2motion_backend.py  install_pan_backend.py  install_torch_runtime.py  spine_binary_export.cjs
tools/blender_io/: bone_utils.py  math_utils.py  pose_transfer.py
