[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatrig-retarget-sidecar"
version = "0.1.0"
description = "Public Python sidecar backend for generic retargeting workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy<2.3,>=1.23.5",
  "scipy",
  "bpy>=4.0",
]

[project.optional-dependencies]
motion2motion = [
  "imageio",
  "PyYAML",
  "tqdm",
  "unfoldNd",
]
dev = [
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]
all = [
  "imageio",
  "pre-commit>=3.7,<5",
  "PyYAML",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "scikit-learn",
  "tensorboard",
  "torchsummary",
  "tqdm",
  "unfoldNd",
]

[project.scripts]
flatrig-retarget-sidecar = "flatrig_retarget_sidecar.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "cli", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cli/flatrig_retarget.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flatrig_retarget_sidecar"]

[tool.coverage.report]
show_missing = true
skip_covered = false
