[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatrig-retarget-sidecar"
version = "0.1.0"
description = "Public Blender (bpy) worker sidecar for FlatRig: scene/animation/mesh extraction, rendering, and format export."
readme = "README.md"
requires-python = ">=3.11,<3.12"
# Blender-worker only.
dependencies = [
  "numpy<2,>=1.23.5",
  "bpy>=4.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
flatrig-retarget-sidecar = "flatrig.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "cli", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cli/flatrig_retarget.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

[tool.pycodestyle]
max-line-length = 100

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flatrig"]

[tool.coverage.report]
show_missing = true
skip_covered = false
